{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 838,
  "lineage": "a37a4b02-6d32-fa3b-52c8-91683393976e",
  "resources": [
    {
      "module": "module.single_account_multi_region",
      "mode": "data",
      "type": "aws_vpc",
      "name": "peer_vpc",
      "provider": "module.single_account_multi_region.provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:089633309135:vpc/vpc-0dc1734193038ec7c",
            "cidr_block": "10.1.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f64e2c4c5890d2e6",
                "cidr_block": "10.1.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0a396fe61a55f742f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc1734193038ec7c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b427f90aa093c1a8",
            "owner_id": "089633309135"
          }
        }
      ]
    },
    {
      "module": "module.single_account_multi_region",
      "mode": "data",
      "type": "aws_vpc",
      "name": "this_vpc",
      "provider": "module.single_account_multi_region.provider[\"registry.terraform.io/hashicorp/aws\"].this",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:089633309135:vpc/vpc-09bf0534481586346",
            "cidr_block": "10.2.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0026a1ea7ab71944f",
                "cidr_block": "10.2.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-08df1a09fcb787748",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09bf0534481586346",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00670e75276c0be30",
            "owner_id": "089633309135"
          }
        }
      ]
    },
    {
      "module": "module.single_account_multi_region",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "this",
      "provider": "module.single_account_multi_region.provider[\"registry.terraform.io/hashicorp/aws\"].this",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0798d334fdd3b7824",
            "peer_owner_id": "089633309135",
            "peer_region": "eu-west-1",
            "peer_vpc_id": "vpc-0dc1734193038ec7c",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-09bf0534481586346"
          },
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc",
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.single_account_multi_region",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "peer_accepter",
      "provider": "module.single_account_multi_region.provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0798d334fdd3b7824",
            "peer_owner_id": "089633309135",
            "peer_region": "eu-west-1",
            "peer_vpc_id": "vpc-0dc1734193038ec7c",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-09bf0534481586346",
            "vpc_peering_connection_id": "pcx-0798d334fdd3b7824"
          },
          "dependencies": [
            "module.single_account_multi_region.aws_vpc_peering_connection.this",
            "module.vpc_b.aws_vpc.vpc",
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.single_account_multi_region",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "accepter",
      "provider": "module.single_account_multi_region.provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-0798d334fdd3b7824",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_peering_connection_id": "pcx-0798d334fdd3b7824"
          },
          "dependencies": [
            "module.single_account_multi_region.aws_vpc_peering_connection.this",
            "module.single_account_multi_region.aws_vpc_peering_connection_accepter.peer_accepter",
            "module.vpc_b.aws_vpc.vpc",
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.single_account_multi_region",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "this",
      "provider": "module.single_account_multi_region.provider[\"registry.terraform.io/hashicorp/aws\"].this",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "id": "pcx-0798d334fdd3b7824",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "vpc_peering_connection_id": "pcx-0798d334fdd3b7824"
          },
          "dependencies": [
            "module.single_account_multi_region.aws_vpc_peering_connection.this",
            "module.single_account_multi_region.aws_vpc_peering_connection_accepter.peer_accepter",
            "module.vpc_b.aws_vpc.vpc",
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_route",
      "name": "this_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.32.0/20",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04c764b724cea5009943240730",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04c764b724cea5009",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0798d334fdd3b7824"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.single_account_multi_region.aws_vpc_peering_connection.this",
            "module.vpc_b.aws_route_table.private",
            "module.vpc_b.aws_vpc.vpc",
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:089633309135:route-table/rtb-04c764b724cea5009",
            "id": "rtb-04c764b724cea5009",
            "owner_id": "089633309135",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc1734193038ec7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:089633309135:route-table/rtb-0486ea300a318bd4b",
            "id": "rtb-0486ea300a318bd4b",
            "owner_id": "089633309135",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc1734193038ec7c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assosiaciton",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c0fa1b3dc6c01f4",
            "route_table_id": "rtb-04c764b724cea5009",
            "subnet_id": "subnet-0ec5254c5145c5314"
          },
          "dependencies": [
            "module.vpc_b.aws_route_table.private",
            "module.vpc_b.aws_subnet.pri_sub",
            "module.vpc_b.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e55e5c7b98f8c2e0",
            "route_table_id": "rtb-04c764b724cea5009",
            "subnet_id": "subnet-0676b878352ad1550"
          },
          "dependencies": [
            "module.vpc_b.aws_route_table.private",
            "module.vpc_b.aws_subnet.pri_sub",
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assosiaciton",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04618893725d0d770",
            "route_table_id": "rtb-0486ea300a318bd4b",
            "subnet_id": "subnet-0c2ea8bcc2bb95d02"
          },
          "dependencies": [
            "module.vpc_b.aws_route_table.public",
            "module.vpc_b.aws_subnet.pub_sub",
            "module.vpc_b.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0226a590662775a44",
            "route_table_id": "rtb-0486ea300a318bd4b",
            "subnet_id": "subnet-0da4ef398c0cf9d7a"
          },
          "dependencies": [
            "module.vpc_b.aws_route_table.public",
            "module.vpc_b.aws_subnet.pub_sub",
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:089633309135:subnet/subnet-0ec5254c5145c5314",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec5254c5145c5314",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089633309135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dc1734193038ec7c"
          },
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:089633309135:subnet/subnet-0676b878352ad1550",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0676b878352ad1550",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089633309135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dc1734193038ec7c"
          },
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:089633309135:subnet/subnet-0c2ea8bcc2bb95d02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2ea8bcc2bb95d02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089633309135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dc1734193038ec7c"
          },
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:089633309135:subnet/subnet-0da4ef398c0cf9d7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da4ef398c0cf9d7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089633309135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dc1734193038ec7c"
          },
          "dependencies": [
            "module.vpc_b.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_b",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].peer",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:089633309135:vpc/vpc-0dc1734193038ec7c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-05480b73515853652",
            "default_route_table_id": "rtb-0b427f90aa093c1a8",
            "default_security_group_id": "sg-0f65bb3819c8d986d",
            "dhcp_options_id": "dopt-0a396fe61a55f742f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc1734193038ec7c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b427f90aa093c1a8",
            "owner_id": "089633309135"
          }
        }
      ]
    },
    {
      "module": "module.vpc_c",
      "mode": "managed",
      "type": "aws_route",
      "name": "this_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].this",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.32.0/20",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07773bf2e5c39ceed28674781",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07773bf2e5c39ceed",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0798d334fdd3b7824"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.single_account_multi_region.aws_vpc_peering_connection.this",
            "module.vpc_b.aws_vpc.vpc",
            "module.vpc_c.aws_route_table.private",
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_c",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].this",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:089633309135:route-table/rtb-07773bf2e5c39ceed",
            "id": "rtb-07773bf2e5c39ceed",
            "owner_id": "089633309135",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09bf0534481586346"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_c",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assosiaciton",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].this",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c7b991eced6edf6",
            "route_table_id": "rtb-07773bf2e5c39ceed",
            "subnet_id": "subnet-0e8ef8b29a9da2b21"
          },
          "dependencies": [
            "module.vpc_c.aws_route_table.private",
            "module.vpc_c.aws_subnet.pri_sub",
            "module.vpc_c.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d1c12d26806f290",
            "route_table_id": "rtb-07773bf2e5c39ceed",
            "subnet_id": "subnet-0e4c61c2dfbbebf0a"
          },
          "dependencies": [
            "module.vpc_c.aws_route_table.private",
            "module.vpc_c.aws_subnet.pri_sub",
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_c",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].this",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:089633309135:subnet/subnet-0e8ef8b29a9da2b21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.2.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8ef8b29a9da2b21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089633309135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09bf0534481586346"
          },
          "dependencies": [
            "module.vpc_c.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:089633309135:subnet/subnet-0e4c61c2dfbbebf0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.2.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4c61c2dfbbebf0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "089633309135",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-09bf0534481586346"
          },
          "dependencies": [
            "module.vpc_c.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_c",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].this",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:089633309135:vpc/vpc-09bf0534481586346",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-01c23d14ad7729b68",
            "default_route_table_id": "rtb-00670e75276c0be30",
            "default_security_group_id": "sg-051955e66f5bbbf77",
            "dhcp_options_id": "dopt-08df1a09fcb787748",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09bf0534481586346",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00670e75276c0be30",
            "owner_id": "089633309135"
          }
        }
      ]
    }
  ]
}